# copilot-quorum

./: .gitignore  .mise.toml  CLAUDE.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  quorum.example.lua  quorum.example.toml
.github/: PULL_REQUEST_TEMPLATE.md  labels.yml  release-drafter.yml
.github/PULL_REQUEST_TEMPLATE/: default.md  japanese.md
.github/docs/: GITHUB_WORKFLOWS.md
.github/workflows/: ci.yml  labels.yml  release-drafter.yml  release.yml
.quorum/: context.md
application/: Cargo.toml
application/src/: config.rs  lib.rs  status_tracker.rs
application/src/config/: execution_params.rs  mod.rs  quorum_config.rs
application/src/ports/: action_reviewer.rs  agent_progress.rs  clipboard.rs  composite_progress.rs  config_accessor.rs  context_loader.rs  conversation_logger.rs  event_publisher.rs  human_intervention.rs  llm_gateway.rs  mod.rs  progress.rs  reference_resolver.rs  script_progress_bridge.rs  scripting_engine.rs  tool_executor.rs  tool_schema.rs  tui_accessor.rs  tui_accessor_state.rs  ui_event.rs
application/src/use_cases/: agent_controller.rs  execute_task.rs  gather_context.rs  init_context.rs  mod.rs  run_agent.rs  run_ask.rs  run_quorum.rs  run_review.rs  shared.rs  tool_helpers.rs
application/src/use_cases/run_agent/: hil.rs  mod.rs  planning.rs  review.rs  types.rs
application/src/use_cases/run_quorum/: debate_strategy.rs  mod.rs  quorum_strategy.rs  strategy_executor.rs  test_support.rs  types.rs
cli/: Cargo.toml
cli/src/: main.rs  review.rs
docs/: AGENT.md  ARCHITECTURE.md  ENSEMBLE_ARCHITECTURE.md  README.md
docs/concepts/: ensemble-mode.md  interaction-model.md  quorum.md
docs/design/: config-refactoring.md
docs/explanation/: agent-behavior.md  design-philosophy.md  ensemble-mode.md  interaction-model.md  orchestration-axes.md  quorum-consensus.md  transport-and-concurrency.md  tui-design.md
docs/features/: README.md  agent-system.md  cli-and-configuration.md  ensemble-mode.md  native-tool-use.md  quorum.md  tool-system.md  tui.md
docs/guides/: cli-and-configuration.md  tui.md
docs/how-to/: add-custom-tools.md  debug-with-logs.md  extend-the-codebase.md  manage-project-context.md  review-a-pr.md  run-a-quorum-discussion.md  run-agent-tasks.md  use-ensemble-mode.md  use-the-tui.md  write-lua-plugins.md
docs/reference/: agent-system.md  architecture.md  cli.md  configuration.md  logging.md  native-tool-use.md  scripting.md  (+5 more)
domain/: Cargo.toml
domain/src/: lib.rs  util.rs
domain/src/agent/: agent_policy.rs  context_mode.rs  entities.rs  mod.rs  model_config.rs  plan_parser.rs  status.rs  tool_execution.rs  validation.rs  value_objects.rs
domain/src/buffer/: context_mode.rs  mod.rs
domain/src/config/: config_key.rs  mod.rs  output_format.rs  supervisor_reporter_mode.rs
domain/src/context/: context_budget.rs  context_mode.rs  entities.rs  mod.rs  reference.rs  task_result_buffer.rs  value_objects.rs
domain/src/core/: error.rs  mod.rs  model.rs  question.rs  string.rs
domain/src/interaction/: mod.rs
domain/src/orchestration/: buffer.rs  entities.rs  interaction.rs  mod.rs  mode.rs  scope.rs  session_mode.rs  strategy.rs  stream_context.rs  value_objects.rs
domain/src/prompt/: agent.rs  debate.rs  mod.rs  review.rs  template.rs
domain/src/providers/: mod.rs
domain/src/quorum/: consensus.rs  mod.rs  objection.rs  parsing.rs  result_event.rs  rule.rs  vote.rs
domain/src/scripting/: mod.rs
domain/src/session/: entities.rs  mod.rs  repository.rs  response.rs  stream.rs
domain/src/tool/: detection.rs  entities.rs  mod.rs  provider.rs  traits.rs  value_objects.rs
infrastructure/: Cargo.toml
infrastructure/src/: lib.rs
infrastructure/src/clipboard/: arboard_adapter.rs  fallback.rs  mod.rs  osc52_adapter.rs
infrastructure/src/config/: file_config.rs  loader.rs  mod.rs
infrastructure/src/config/file_config/: agent.rs  context_budget.rs  mod.rs  models.rs  output.rs  providers.rs  quorum.rs  repl.rs  tools.rs  tui.rs
infrastructure/src/context/: loader.rs  mod.rs
infrastructure/src/copilot/: error.rs  gateway.rs  mod.rs  protocol.rs  router.rs  session.rs  transport.rs
infrastructure/src/logging/: jsonl_logger.rs  mod.rs
infrastructure/src/providers/: copilot_adapter.rs  mod.rs  routing.rs
infrastructure/src/providers/bedrock/: adapter.rs  mod.rs  model_map.rs  session.rs  types.rs
infrastructure/src/reference/: github.rs  mod.rs
infrastructure/src/scripting/: command_api.rs  config_api.rs  event_bus.rs  keymap_api.rs  lua_engine.rs  mod.rs  providers_api.rs  sandbox.rs  tools_api.rs  tui_api.rs
infrastructure/src/supervisor/: herdr_reporter.rs  mod.rs
infrastructure/src/tools/: command.rs  custom_provider.rs  executor.rs  file.rs  mod.rs  registry.rs  schema.rs  search.rs
infrastructure/src/tools/builtin/: mod.rs  provider.rs
infrastructure/src/tools/cli/: config.rs  discovery.rs  mod.rs  provider.rs
infrastructure/src/tools/web/: fetch.rs  mod.rs  search.rs
presentation/: Cargo.toml
presentation/src/: lib.rs
presentation/src/agent/: human_intervention.rs  mod.rs  presenter.rs  progress.rs  repl.rs  thought.rs
presentation/src/chat/: mod.rs  repl.rs
presentation/src/cli/: commands.rs  mod.rs  rpc_client.rs
presentation/src/config/: loader.rs  mod.rs
presentation/src/output/: console.rs  formatter.rs  mod.rs
presentation/src/progress/: mod.rs  reporter.rs
presentation/src/tui/: app.rs  app_action_handler.rs  app_controller.rs  app_event_dispatch.rs  app_hil.rs  app_render.rs  app_tab_command.rs  app_tui_changes.rs  command_completion.rs  command_registry.rs  content.rs  editor.rs  event.rs  human_intervention.rs  interaction_scheduler.rs  keymap_registry.rs  layout.rs  mod.rs  mode.rs  presenter.rs  progress.rs  remote.rs  remote_view.rs  route.rs  state.rs  surface.rs  tab.rs
presentation/src/tui/widgets/: conversation.rs  header.rs  help.rs  input.rs  lua_content.rs  mod.rs  model_stream.rs  progress.rs  progress_panel.rs  status.rs  status_bar.rs  tab_bar.rs  tool_log.rs
scripts/: probe-copilot-server.py  smoke-test.sh  tui-rpc.py
(+21 files in other folders)
