[workspace]
resolver = "2"
members = [
    "domain",
    "application",
    "infrastructure",
    "presentation",
    "cli",
]

[workspace.package]
version = "0.5.5"
edition = "2024"
authors = ["music-brain88"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/music-brain88/copilot-quorum"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.41", features = ["full"] }
tokio-util = "0.7"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Configuration
figment = { version = "0.10", features = ["toml", "env"] }

# CLI
clap = { version = "4.5", features = ["derive"] }

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Terminal UI
indicatif = "0.17"
colored = "2.1"

# Async traits
async-trait = "0.1"

# HTTP client (optional, for web tools)
reqwest = { version = "0.12", features = ["json"] }

# HTML parsing (optional, for web tools)
scraper = "0.22"

# Workspace crates
quorum-domain = { path = "domain" }
quorum-application = { path = "application" }
quorum-infrastructure = { path = "infrastructure" }
quorum-presentation = { path = "presentation" }
