[package]
name = "quorum-application"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Application layer for copilot-quorum - Use cases and ports"

[dependencies]
# Domain layer
quorum-domain = { workspace = true }

# Async runtime
tokio = { workspace = true }
tokio-util = { workspace = true }

# Async traits
async-trait = { workspace = true }

# Error handling
thiserror = { workspace = true }

# Logging
tracing = { workspace = true }

# Async utilities
futures = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# DateTime (for ConversationLogger port)
chrono = { workspace = true }
