[package]
name = "copilot-quorum"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "AI Agent with Quorum-based safety reviews"

[[bin]]
name = "copilot-quorum"
path = "src/main.rs"

[dependencies]
# All layers
quorum-domain = { workspace = true }
quorum-application = { workspace = true }
quorum-infrastructure = { workspace = true }
quorum-presentation = { workspace = true }

# Async runtime
tokio = { workspace = true }
tokio-util = { workspace = true }

# CLI
clap = { workspace = true }

# Error handling
anyhow = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }

# DateTime
chrono = { workspace = true }

# Platform directories
dirs = "6.0"

[features]
default = ["web-tools", "scripting"]
web-tools = ["quorum-infrastructure/web-tools"]
scripting = ["quorum-infrastructure/scripting"]
bedrock = ["quorum-infrastructure/bedrock"]
