[package]
name = "quorum-infrastructure"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Infrastructure layer for copilot-quorum - External adapters and implementations"

[dependencies]
# Domain and application layers
quorum-domain = { workspace = true }
quorum-application = { workspace = true }

# Async runtime
tokio = { workspace = true }
tokio-util = { workspace = true }

# Async traits
async-trait = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Configuration
figment = { workspace = true }
toml = { workspace = true }
dirs = "6.0.0"

# Error handling
thiserror = { workspace = true }

# Logging
tracing = { workspace = true }

# File system operations
glob = "0.3"
regex = "1"

# CLI tool detection
which = "7"

# HTTP client (optional, for web tools)
reqwest = { workspace = true, optional = true }

# HTML parsing (optional, for web tools)
scraper = { workspace = true, optional = true }

[target.'cfg(target_os = "linux")'.dependencies]
libc = { workspace = true }

[features]
default = []
web-tools = ["dep:reqwest", "dep:scraper"]

[dev-dependencies]
tempfile = "3"
tokio = { workspace = true, features = ["rt", "macros"] }
