[package]
name = "quorum-presentation"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Presentation layer for copilot-quorum - CLI and output formatting"

[dependencies]
# Domain and application layers
quorum-domain = { workspace = true }
quorum-application = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Terminal UI
indicatif = { workspace = true }
colored = { workspace = true }
ratatui = "0.29"
crossterm = { version = "0.28", features = ["event-stream"] }

# CLI
clap = { workspace = true }
dirs = "6.0.0"

# Async
tokio = { workspace = true }
tokio-util = { workspace = true }
async-trait = { workspace = true }
futures = "0.3"
